<?xml version="1.0"?>
<package format="2">
  <name>voxblox_octomap_conversions</name>
  <version>0.0.0</version>
  <description>Voxblox ROS interface</description>

  <author email="magnusgaertner@gmail.com">Magnus Gärtner</author>
  <maintainer email="magnusgaertner@gmail.com">Magnus Gärtner</maintainer>
 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

   <depend>voxblox</depend>
  <depend>voxblox_msgs</depend>
  <depend>voxblox_ros</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
</package>
